# whisper-web

./: LICENSE  README.md  index.html  package.json
.github/workflows/: main.yml
back/: .dockerignore  .env.example  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt  wp.py
src/: App.svelte
src/lib/: Home.svelte  Progress.svelte  config.ts
